@@ -1,3 +1,7 @@
+- Move RenderGroup refresh to UpdateData
+- Add Tree Snapping legacy type converter
+
+
 Version 0.9.3 -
 
 - Add option to ignore Tree Anarchy mod data
